# RubiksCube

./: CMakeLists.txt  README.md  main.cpp
cube/: cube.cpp  cube.h  window.cpp  window.h
shaders/: fragment.glslf  vertex.glslv
utils/: shaders.cpp  shaders.h  utility.cpp  utility.h
